bitfields/tests/compile_error_cases/errors/bitflag_empty_type.rs
use bitfields::bitflag;

#[bitflag()]
enum Flags {
    #[base]
    Unknown = 0,
    A = 1,
}

fn main() {}

