bitfields/tests/compile_error_cases/errors/bitflag_empty_type.stderr
error: The bitflag attribute must have an unsigned integer type as its first argument.
 --> tests/compile_error_cases/errors/bitflag_empty_type.rs:3:1
  |
3 | #[bitflag()]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitflag` (in Nightly builds, run with -Z macro-backtrace for more info)
